added the onMessage script to the homepage

--- a/Django/Test/main/templates/main/Home.html
+++ b/Django/Test/main/templates/main/Home.html
@@ -19,4 +19,20 @@
 <div class = "ImgContainer">
     <img src = {{Img}}>
 </div>
+
+<h1 id="WSS"></h1>
+
+<script>
+    var socket = new Webscoket("ws://localhost:8000/ws/test/");
+    socket.onMessage(function(msg){
+        console.log(msg);
+        var data = JSON.parse(msg.data);
+        console.log(msg);
+        document.querySelector("#WSS").innerHTML = data.message;
+    });
+
+</script>
+
+
+
 {%endblock%}
